# backend-dev-utils

./: .gitignore  404.html  CNAME  README.md  index.html  mkdocs.yml  pyproject.toml  run_local_tests.sh  sitemap.xml
.github/workflows/: ci.yml  python-publish.yml
backend_dev_utils/: __init__.py
backend_dev_utils/database_handler/: multiple_database_handler.py  single_database_handler.py
backend_dev_utils/design_patterns/singletons/: exceptions.py
backend_dev_utils/design_patterns/singletons/named_singleton/: named_singleton_base.py  named_singleton_meta.py
backend_dev_utils/design_patterns/singletons/singleton/: singleton_base.py  singleton_meta.py
backend_dev_utils/fastapi_helpers/: fastapi_app.py  fastapi_route.py  fastapi_router.py
backend_dev_utils/http_helpers/: exceptions.py  url.py
backend_dev_utils/logger_manager/: logger_manager.py
change_log/: index.html
database_handlers/: index.html
design_patterns/: index.html
docs/: change_log.md  database_handlers.md  design_patterns.md  fastapi_helpers.md  http_helpers.md  index.md  logger_manager.md  test.md
docs/stylesheets/: extra.css
docs_src/: test.py
docs_src/database_handlers/: multiple_database_handler.py  single_database_handler.py
docs_src/design_patterns/singletons/: named_singleton.py  singleton.py
docs_src/fastapi_helpers/adding_routers/: main.py
docs_src/fastapi_helpers/adding_routes/: main.py
docs_src/fastapi_helpers/basic_app/: main.py
docs_src/logger_manager/: file_handler.py  rotating_file_handler.py
fastapi_helpers/: index.html
http_helpers/: index.html
logger_manager/: index.html
search/: search_index.json
test/: index.html
tests/unit/database_handler/: conftest.py  test_multiple_database_handler.py  test_single_database_handler.py
tests/unit/database_handlers/: conftest.py  test_multiple_database_handler.py  test_single_database_handler.py
tests/unit/design_patterns/singletons/: test_named_singleton.py  test_singleton.py
tests/unit/fastapi_helpers/: conftest.py  test_fastapi_app.py  test_fastapi_route.py  test_fastapi_router.py
tests/unit/http_helpers/: test_url.py
tests/unit/logger_manager/: test_logger_manager.py
